fix(root): fixes toast examples being hidden behind content
fixes issue where toasts would display behind component preview content

--- a/src/components/CodePreview/index.css
+++ b/src/components/CodePreview/index.css
@@ -13,12 +13,10 @@
   display: flex;
   flex-direction: column;
   margin-bottom: var(--ic-space-lg);
-  z-index: 1;
 }
 
 .comp-preview ic-side-navigation {
   height: 43.75rem;
-  z-index: 0;
 }
 
 .offscreen {
